# vlc-unity

./: .gitignore  .gitlab-ci.yml  .gitmodules  0001-Linux-build.patch  COPYING  Info.plist.template.sh  NEWS  README.md  app.config  build-libvlc-linux.sh  build-libvlc.sh  build.sh  config.h.meson  copy_ios.sh  get-libvlc-windows.sh  get-libvlcsharp.sh  libvlc_ios.cross  libvlc_windows.crossfile  meson.build  meson_options.txt  package-unity-plugin.sh  vlc-unity-windows.sln
.gitlab/issue_templates/: bug.md  feature_request.md
Assets/: CharacterControl.cs  LICENSE  PlayerController.cs  RemoteTimeDisplayer.cs  Test.unity  TestBinding.cs  TestPlugin.bundle  TestPlugin.cs  UseRenderingPlugin.cs  UseRenderingPlugin2.cs  VJHandler.cs  cone10-soppera.blend  cone10-soppera.fbx  main.unity
Assets/Materials/: cone.mat  cone6_texture 1.mat  cone6_texture.mat  cone8_texture 1.mat  cone8_texture 2.mat  cone8_texture 3.mat  cone8_texture.mat  pied.mat  shadow_receiver.mat  texture_base_light_flou.mat  texture_shadow 1.mat  texture_shadow.mat
Assets/PluginSource/: Common.mk  Log.h  RenderAPI.h  RenderAPI_D3D11.cpp  RenderingPlugin.cpp
Assets/UniClipboard/Plugins/iOS/: Clipper.m
Assets/VLC-Unity-Windows/: documentation.txt
Assets/VLC-Unity-Windows/Materials/: cone.mat  cone6_texture 1.mat  cone8_texture 1.mat  cone8_texture 2.mat  cone8_texture 3.mat  cone8_texture.mat  pied.mat  texture_shadow.mat
Assets/VLC-Unity-Windows/Plugins/Source/: Common.mk  RenderingPlugin.cpp
Assets/VLC-Unity-Windows/Scripts/: CharacterControl.cs  ThreeSixtyPlayback.cs  UseRenderingPlugin.cs  main.unity
Assets/VLCUnity/: VLCUnity.asmdef  documentation.md  documentation.txt  notice.txt
Assets/VLCUnity/Demos/: VLCUnity.Demos.asmdef
Assets/VLCUnity/Demos/Materials/: VLC Example Brown.mat  VLC Example Grey.mat  VLC Example Orange.mat  VLC Example TV Bezel.mat  VLC Example Unlit Screen.mat  VLC Example Yellow.mat  cone6_texture.mat  screen.mat
Assets/VLCUnity/Demos/Media/: Demo VLC Config.asset
Assets/VLCUnity/Demos/Playlist/: Demo Playlist.asset
Assets/VLCUnity/Demos/Prefabs/: VLC Example Canvas Player.prefab  VLC Example Track Button.prefab  VLC Example Track Label.prefab  VLC Stream Stats.prefab
Assets/VLCUnity/Demos/Scenes/: MinimalPlayback.unity  Subtitles.unity  ThreeSixty.unity  VLC 3D Example.unity  VLC Canvas Example.unity  VLC Playlist Demo.unity  VLC Preload Demo.unity  VLC Stats Demo.unity  VLCCastDemo.unity  VLCMinimalPlayback.unity  VLCSubtitles.unity  VLCThreeSixty.unity  VLCTransparentVideoPlayback.unity  VLCYouTubePlayback.unity
Assets/VLCUnity/Demos/Scripts/: MinimalPlayback.cs  Subtitles.cs  ThreeSixty.cs  UILineGraph.cs  VLCCastExample.cs  VLCSubtitles.cs  (+10 more)
Assets/VLCUnity/Editor/: Build.cs  CLIBuild.cs  MacOSQuarantineRemover.cs  PreBuild.cs  Unload.cs  VLCMediaPlayerEditor.cs  VLCNativePluginProcessor.cs  VLCUnity.Editor.asmdef
Assets/VLCUnity/Internal/: OnLoad.cs  TextureHelper.cs  TrialNotice.cs  VLCAudioSource.cs  VLCDisplayMesh.cs  VLCDisplayUGUI.cs  VLCInput.cs  VLCMediaPlayer.cs  VLCPlayerConfiguration.cs  VLCPlayerEvent.cs  VLCVideoProviderBase.cs
LibVLC-Unity-Wrapper/: Makefile
LibVLC-Unity-Wrapper/src/: RenderAPI.h  RenderAPI_D3D12.cpp  RenderingPlugin.cpp
LibVLC-Wrapper/: libvlcWrapper.c
Plugin/: Common.mk  Log.h  Makefile  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderingPlugin.cpp  RenderingPlugin.lib  Test.cpp
Plugin/Unity/: IUnityGraphics.h
PluginSource/: Common.mk  Log.cpp  Log.h  PlatformBase.h  Readme.md  RenderAPI.cpp  RenderAPI.h  RenderAPI_Android.cpp  RenderAPI_D3D11.cpp  RenderAPI_OpenGLBase.cpp  RenderAPI_OpenGLBase.h  RenderAPI_OpenGLCGL.h  RenderAPI_OpenGLCGL.mm  RenderAPI_OpenGLEAGL.h  RenderAPI_OpenGLEAGL.mm  RenderAPI_OpenGLEGL.cpp  RenderAPI_OpenGLEGL.h  RenderAPI_OpenGLGLX.cpp  RenderAPI_OpenGLGLX.h  RenderAPI_OpenGLLinuxDMABuf.cpp  RenderAPI_OpenGLLinuxDMABuf.h  RenderAPI_OpenGLLinuxEGL.cpp  RenderAPI_OpenGLLinuxEGL.h  RenderAPI_OpenGLWatermark.cpp  RenderAPI_OpenGLWatermark.h  RenderAPI_Vulkan.cpp  RenderAPI_Vulkan.h  RenderingPlugin.cpp  meson.build  watermark.png.h  watermark.raw.h  watermark2c.sh
PluginSource/Project/: VLCUnityPlugin.sln  VLCUnityPlugin.vcxproj  VLCUnityPluginUWP.vcxproj  VLCUnityPluginUWP.vcxproj.filters
PluginSource/Source/: RenderingPlugin.cpp
PluginSource/Source/Unity/: IUnityShaderCompilerAccess.h
PluginSource/Unity/: IUnityGraphics.h  IUnityGraphicsMetal.h  IUnityGraphicsVulkan.h
PluginSource/jni/: Android.mk  Application.mk
ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
VLC-Unity-Wrapper/: CMakeLists.txt  Makefile  README.rst  build-android.sh  build-win.sh  opengl1.patch  opengl2.patch
VLC-Unity-Wrapper/android-wrapper/: build.gradle  local.properties  settings.gradle
VLC-Unity-Wrapper/android-wrapper/gradle/wrapper/: gradle-wrapper.properties
VLC-Unity-Wrapper/android-wrapper/vlcunitylib/: AndroidManifest.xml  build.gradle
VLC-Unity-Wrapper/cmake/: FindOpenGLES2.cmake
VLC-Unity-Wrapper/patches/: 0021-wdummy-add-dummy-video-window-provider.patch  0022-vgl-provide-a-module-to-allow-rendering-in-a-user-de.patch  0023-vgl-expose-opengl-callbacks-through-libvlc.patch  0024-compile-libgl_plugin-for-iOS.patch  0025-vgl-add-option-to-inhibit-360-and-stereo-projection.patch
VLC-Unity-Wrapper/src/: Log.cpp  RenderAPI.cpp  RenderAPI.h  RenderAPI_Android.cpp  RenderAPI_D3D11.cpp  RenderAPI_D3D9.cpp  RenderAPI_Metal.mm  RenderAPI_OpenGL2.cpp  RenderAPI_OpenGLBase.cpp  RenderAPI_OpenGLBase.h  RenderAPI_OpenGLCoreES.cpp  RenderAPI_OpenGLEGL.cpp  RenderAPI_OpenGLEGL.h  RenderAPI_OpenGLGlx.cpp  RenderAPI_OpenGLWgl.cpp  RenderingPlugin.cpp  plugin.def
cross/: android-arm64-v8a-ndk25-vulkan.txt  android-arm64-v8a-ndk25.txt  iphoneos.txt  iphonesimulator.txt  macos_x86_64.txt  uwp-arm64.txt  uwp-x86_64.txt  windows-x86_64.txt
docs/: home.md
patches/: disable-activex.patch  disable-rav1e.patch  no-libvlcjni-build.patch  trial.patch  uwp-plugins-path.patch
(+9 files in other folders)
