option('watermark',
    type: 'boolean',
    value: false,
    description: 'Display the Videolabs watermark')

option('static_android',
    type: 'boolean',
    value: false,
    description: 'Enable or disable static Android build')

option('fatal_warnings',
    type: 'boolean',
    value: true,
    description: 'Treat compiler warnings as errors')